fix saved address

--- a/SinExWebApp20256461/Views/SavedAddresses/Edit.cshtml
+++ b/SinExWebApp20256461/Views/SavedAddresses/Edit.cshtml
@@ -13,6 +13,7 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.SavedAddressID)
+        @Html.HiddenFor(model => model.NickName)
 
         <h4>Nickname: @(Model.NickName)</h4>
 
