--- a/SinExWebApp20256461/Views/Pickups/Create.cshtml
+++ b/SinExWebApp20256461/Views/Pickups/Create.cshtml
@@ -5,8 +5,14 @@
 }
 
 <h2>New @Html.DisplayFor(model => model.Pickup.Type) Pickup</h2>
+
+
 @using (Html.BeginForm("Create", "Pickups"))
 {
+    @Html.AntiForgeryToken()
+    @Html.HiddenFor(model => model.Pickup.Type)
+    @Html.HiddenFor(model => model.WaybillId)
+
     <div class="btn-group" style="margin:5px 0 10px 0;">
         @Html.ActionLink("Immediate", "Create", new {waybillId= ViewBag.WaybillId, pickupType = "Immediate", location = ViewBag.Location }, new { @class = "btn btn-primary btn-large" })
         @Html.ActionLink("Prearranged", "Create", new { waybillId = ViewBag.WaybillId, pickupType = "Prearranged", location = ViewBag.Location }, new { @class = "btn btn-info btn-large" })
@@ -29,8 +35,6 @@
 
 
 
-
-
 <h2>The pickup Location  :</h2>
     <div class="btn-group" style="margin:5px 0 10px 0;">
         @Html.ActionLink("Same", "Create", new { waybillId = ViewBag.WaybillId, pickupType = Model.Pickup.Type, location = "Same" }, new { @class = "btn btn-success btn-large" })
@@ -45,10 +49,11 @@
 
        @if (ViewBag.location == "Diff")
         {
-        @Html.DropDownListFor(model => model.Pickup.Location, new SelectList(ViewBag.pickupLocationNicknames), "Please select another pickup location", new {@class = "form-control" })
-
+        @Html.DropDownListFor(model => model.PickupLocationNickname, new SelectList(ViewBag.pickupLocations), "Please select another pickup location", new {@class = "form-control" })
        }
     </div>
+
+
 
 <div class="form-group">
     <div class="col-md-offset-2 col-md-10">
