--- a/SinExWebApp20256461/Views/Pickups/Create.cshtml
+++ b/SinExWebApp20256461/Views/Pickups/Create.cshtml
@@ -27,10 +27,6 @@
         <div>You can prearranged your pickup up to 5 days, specify both date and time</div>
     }
 
-
-
-
-
 <h2>The pickup Location  :</h2>
     <div class="btn-group" style="margin:5px 0 10px 0;">
         @Html.ActionLink("Same", "Create", new { pickupType = Model.Pickup.Type, location = "Same" }, new { @class = "btn btn-success btn-large" })
@@ -49,10 +45,35 @@
         }
     </div>
 
-<div class="form-group">
-    <div class="col-md-offset-2 col-md-10">
-        <button type="submit" value="Create" class="btn btn-primary">Save</button>
+<br />
+<div class="row">
+    <div class="col-md-6">
+        <div class="form-group">
+            <div class="col-md-4"> recipient address nickname </div>
+            <div class="col-md-8">
+                @Html.EditorFor(model => model.RecipientNickname, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.RecipientNickname, "", new { @class = "text-danger" })
+            </div>
+        </div>
     </div>
+</div>
+<p>Please enter a nickname for the recipient address if you want to save it for later use</p>
+
+<div class="row">
+    <div class="col-md-6">
+        <div class="form-group">
+            <div class="col-md-4"> pickup address nickname </div>
+            <div class="col-md-8">
+                @Html.EditorFor(model => model.PickupNickname, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.PickupNickname, "", new { @class = "text-danger" })
+            </div>
+        </div>
+    </div>
+</div>
+<p>Please enter a nickname for the pickup address if you want to save it for later use</p>
+<br />
+<div class="form-group">
+    <button type="submit" value="Create" class="btn btn-primary">Save</button>
 </div>
 
 }
