--- a/SinExWebApp20256461/Views/Shipments/Index.cshtml
+++ b/SinExWebApp20256461/Views/Shipments/Index.cshtml
@@ -8,7 +8,7 @@
 
 @if (User.IsInRole("Customer"))
 {
-    <p>@Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-default" })</p>
+    <p>@Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-2default" })</p>
 }
 
 <table class="table">
