--- a/SinExWebApp20256461/Views/Shared/_Layout.cshtml
+++ b/SinExWebApp20256461/Views/Shared/_Layout.cshtml
@@ -22,13 +22,13 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <!--<li>@Html.ActionLink("Home", "Index", "Home")</li>-->
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Service<b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("Cities Served", "Index", "Destinations")</li>
-                            <li>@Html.ActionLink("package Types", "Index", "PackageTypes")</li>
+                            <li>@Html.ActionLink("Package Types", "Index", "PackageTypes")</li>
                             <li>@Html.ActionLink("Service Types", "index", "ServiceTypes")</li>
                             <li>@Html.ActionLink("Fees", "index", "ServicePackageFees")</li>
                             <li>@Html.ActionLink("Currencies", "index", "Currencies")</li>
