--- a/SinExWebApp20256461/Views/Shipments/EditEmployee.cshtml
+++ b/SinExWebApp20256461/Views/Shipments/EditEmployee.cshtml
@@ -56,7 +56,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Shipment.Status, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownListFor(model => model.Shipment.Status, new SelectList(ViewBag.Statuses), "please Select")
+                    @Html.DropDownListFor(model => model.Shipment.Status, new SelectList(ViewBag.Statuses))
                 </div>
             </div>
         }
@@ -260,7 +260,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
-                        @Html.LabelFor(model => model.ShipmentAuthorizationCode, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.LabelFor(model => model.ShipmentAuthorizationCode, "Authorization Code", htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
                             @if (Model.Status.Equals("confirmed") || Model.Status.Equals("picked_up"))
                             {
@@ -281,7 +281,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
-                        @Html.LabelFor(model => model.ShipmentAuthorizationCode, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.LabelFor(model => model.ShipmentAuthorizationCode, "Authorization Code", htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
                             @if (Model.Status.Equals("confirmed") || Model.Status.Equals("picked_up"))
                             {
