--- a/SinExWebApp20256461/Views/Shipments/EditEmployee.cshtml
+++ b/SinExWebApp20256461/Views/Shipments/EditEmployee.cshtml
@@ -51,7 +51,7 @@
             </div>
         </div>
 
-        @if (Model.Status.Equals("confirmed") || Model.Status.Equals("picked_up"))
+        @if (Model.Status == "confirmed" || Model.Status == "picked_up")
         {
             <div class="form-group">
                 @Html.LabelFor(model => model.Shipment.Status, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -104,7 +104,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Packages[i].WeightActual, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @if (Model.Status.Equals("confirmed") || Model.Status.Equals("picked_up"))
+                    @if (Model.Status == "confirmed" || Model.Status == "picked_up")
                     {
                         @Html.EditorFor(model => model.Packages[i].WeightActual, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Packages[i].WeightActual, "", new { @class = "text-danger" })
@@ -200,7 +200,7 @@
                     <div class="form-group">
                         @Html.LabelFor(model => model.DutyAmount, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @if (Model.Status.Equals("confirmed") || Model.Status.Equals("picked_up"))
+                            @if (Model.Status == "confirmed" || Model.Status == "picked_up")
                             {
                                 @Html.EditorFor(model => model.DutyAmount, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.DutyAmount, "", new { @class = "text-danger" })
@@ -216,7 +216,7 @@
                     <div class="form-group">
                         @Html.LabelFor(model => model.TaxAmount, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @if (Model.Status.Equals("confirmed") || Model.Status.Equals("picked_up"))
+                            @if (Model.Status == "confirmed" || Model.Status == "picked_up")
                             {
                                 @Html.EditorFor(model => model.TaxAmount, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.TaxAmount, "", new { @class = "text-danger" })
@@ -255,14 +255,14 @@
             </div>
         </div>
 
-        @if (Model.ShipmentPayer.Equals(Model.TaxPayer))
+        @if (Model.ShipmentPayer == Model.TaxPayer)
         {
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
                         @Html.LabelFor(model => model.ShipmentAuthorizationCode, "Authorization Code", htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @if (Model.Status.Equals("confirmed") || Model.Status.Equals("picked_up"))
+                            @if (Model.Status == "confirmed" || Model.Status == "picked_up")
                             {
                                 @Html.EditorFor(model => model.ShipmentAuthorizationCode, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.ShipmentAuthorizationCode, "", new { @class = "text-danger" })
@@ -283,7 +283,7 @@
                     <div class="form-group">
                         @Html.LabelFor(model => model.ShipmentAuthorizationCode, "Authorization Code", htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @if (Model.Status.Equals("confirmed") || Model.Status.Equals("picked_up"))
+                            @if (Model.Status == "confirmed" || Model.Status == "picked_up")
                             {
                                 @Html.EditorFor(model => model.ShipmentAuthorizationCode, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.ShipmentAuthorizationCode, "", new { @class = "text-danger" })
@@ -299,7 +299,7 @@
                     <div class="form-group">
                         @Html.LabelFor(model => model.DutyAndTaxAuthorizationCode, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @if (Model.Status.Equals("confirmed") || Model.Status.Equals("picked_up"))
+                            @if (Model.Status == "confirmed" || Model.Status == "picked_up")
                             {
                                 @Html.EditorFor(model => model.DutyAndTaxAuthorizationCode, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.DutyAndTaxAuthorizationCode, "", new { @class = "text-danger" })
